--- a/.classpath
+++ b/.classpath
@@ -13,16 +13,30 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_201">
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/commons-codec-1.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/commons-collections4-4.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/commons-compress-1.18.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/curvesapi-1.06.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/jaxb-api-2.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/jaxb-core-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/jaxb-impl-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/poi-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/poi-examples-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/poi-excelant-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/poi-ooxml-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/poi-ooxml-schemas-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/poi-scratchpad-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ROHBA_000/git/SeleniumJava/jars/ApachePOI/xmlbeans-3.1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
